# onnxruntime_segmentation

./: CMakeLists.txt  README.md  main.cpp
